--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "chai-jquery",
   "description": "jQuery assertions for the chai assertion library",
   "keywords": [ "test", "assertion", "assert", "testing", "jQuery" ],
-  "version": "0.0.1",
+  "version": "1.0.0-rc1",
   "repository": {
     "type": "git",
     "url": "https://github.com/jfirebaugh/chai-jquery"
