--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "bugs": {
     "url": "https://github.com/chaijs/chai-jquery/issues"
   },
+  "scripts": {
+    "test": "mocha-phantomjs test/index.html"
+  },
   "main": "./chai-jquery",
   "engines": {
     "node": ">= 0.4.0"
   },
   "devDependencies": {
-    "chai": ">= 1.0.0",
-    "mocha": ">= 1.0.0"
+    "chai": "1",
+    "mocha": "1",
+    "mocha-phantomjs": "3"
   }
 }
