--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "John Firebaugh <john.firebaugh@gmail.com>",
   "name": "chai-jquery",
   "description": "jQuery assertions for the Chai assertion library",
-  "keywords": [ "test", "assertion", "assert", "testing", "jQuery" ],
+  "keywords": [ "chai", "chai-plugin", "vendor", "browser-only", "dom", "test", "assertion", "assert", "testing", "jQuery" ],
   "version": "2.0.0",
   "repository": {
     "type": "git",
